project/target/src/PLParser.java
// Generated from java-escape by ANTLR 4.11.1

import backend.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, STRING=33, NUMBER=34, ID=35, BOOLEAN=36, WS=37, COMMENT=38;
	public static final int
		RULE_program = 0, RULE_stmt = 1, RULE_assign = 2, RULE_block = 3, RULE_ifElseStmt = 4, 
		RULE_forLoop = 5, RULE_expressions = 6, RULE_printStmt = 7, RULE_declare = 8, 
		RULE_argumentsList = 9, RULE_parametersList = 10, RULE_expressionsList = 11, 
		RULE_funtionCall = 12, RULE_value = 13, RULE_arrayLiteral = 14, RULE_arrayIndexing = 15, 
		RULE_arrayAssignment = 16, RULE_listLiteral = 17, RULE_mapLiteral = 18, 
		RULE_setLiteral = 19, RULE_keyValuePairs = 20, RULE_lambda = 21, RULE_builtin = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "stmt", "assign", "block", "ifElseStmt", "forLoop", "expressions", 
			"printStmt", "declare", "argumentsList", "parametersList", "expressionsList", 
			"funtionCall", "value", "arrayLiteral", "arrayIndexing", "arrayAssignment", 
			"listLiteral", "mapLiteral", "setLiteral", "keyValuePairs", "lambda", 
			"builtin"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'='", "'{'", "'}'", "'if'", "'('", "')'", "'else'", "'for'", 
			"'in'", "'..'", "'*'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", 
			"'/'", "'+'", "'-'", "'++'", "'['", "']'", "'print'", "'function'", "','", 
			"'setOf('", "':'", "'lambda'", "'sort'", "'filter'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "STRING", "NUMBER", 
			"ID", "BOOLEAN", "WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }



	public PLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Expr expr;
		public StmtContext stmt;
		public TerminalNode EOF() { return getToken(PLParser.EOF, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			  List<Expr> list = new ArrayList<Expr>();
			setState(50); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(47);
				((ProgramContext)_localctx).stmt = stmt();
				list.add(((ProgramContext)_localctx).stmt.expr);
				}
				}
				setState(52); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((_la) & ~0x3f) == 0 && ((1L << _la) & 135671054952L) != 0 );
			setState(54);
			match(EOF);
			((ProgramContext)_localctx).expr =  new Block(list); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmtContext extends ParserRuleContext {
		public Expr expr;
		public AssignContext assign;
		public BlockContext block;
		public IfElseStmtContext ifElseStmt;
		public ForLoopContext forLoop;
		public ExpressionsContext expressions;
		public PrintStmtContext printStmt;
		public DeclareContext declare;
		public ArrayAssignmentContext arrayAssignment;
		public ArrayIndexingContext arrayIndexing;
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public IfElseStmtContext ifElseStmt() {
			return getRuleContext(IfElseStmtContext.class,0);
		}
		public ForLoopContext forLoop() {
			return getRuleContext(ForLoopContext.class,0);
		}
		public ExpressionsContext expressions() {
			return getRuleContext(ExpressionsContext.class,0);
		}
		public PrintStmtContext printStmt() {
			return getRuleContext(PrintStmtContext.class,0);
		}
		public DeclareContext declare() {
			return getRuleContext(DeclareContext.class,0);
		}
		public ArrayAssignmentContext arrayAssignment() {
			return getRuleContext(ArrayAssignmentContext.class,0);
		}
		public ArrayIndexingContext arrayIndexing() {
			return getRuleContext(ArrayIndexingContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stmt);
		int _la;
		try {
			setState(91);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(57);
				((StmtContext)_localctx).assign = assign();
				 ((StmtContext)_localctx).expr =  ((StmtContext)_localctx).assign.expr; 
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(59);
					match(T__0);
					}
				}

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(62);
				((StmtContext)_localctx).block = block();
				 ((StmtContext)_localctx).expr =  ((StmtContext)_localctx).block.expr; 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(65);
				((StmtContext)_localctx).ifElseStmt = ifElseStmt();
				 ((StmtContext)_localctx).expr =  ((StmtContext)_localctx).ifElseStmt.expr; 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(68);
				((StmtContext)_localctx).forLoop = forLoop();
				 ((StmtContext)_localctx).expr =  ((StmtContext)_localctx).forLoop.expr; 
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(71);
				((StmtContext)_localctx).expressions = expressions(0);
				 ((StmtContext)_localctx).expr =  ((StmtContext)_localctx).expressions.expr; 
				setState(73);
				match(T__0);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(75);
				((StmtContext)_localctx).printStmt = printStmt();
				 ((StmtContext)_localctx).expr =  ((StmtContext)_localctx).printStmt.expr; 
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(77);
					match(T__0);
					}
				}

				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(80);
				((StmtContext)_localctx).declare = declare();
				 ((StmtContext)_localctx).expr =  ((StmtContext)_localctx).declare.expr; 
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(83);
				((StmtContext)_localctx).arrayAssignment = arrayAssignment();
				 ((StmtContext)_localctx).expr =  ((StmtContext)_localctx).arrayAssignment.expr; 
				setState(85);
				match(T__0);
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(87);
				((StmtContext)_localctx).arrayIndexing = arrayIndexing();
				 ((StmtContext)_localctx).expr =  ((StmtContext)_localctx).arrayIndexing.expr; 
				setState(89);
				match(T__0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignContext extends ParserRuleContext {
		public Expr expr;
		public Token ID;
		public ExpressionsContext expressions;
		public TerminalNode ID() { return getToken(PLParser.ID, 0); }
		public ExpressionsContext expressions() {
			return getRuleContext(ExpressionsContext.class,0);
		}
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			((AssignContext)_localctx).ID = match(ID);
			setState(94);
			match(T__1);
			setState(95);
			((AssignContext)_localctx).expressions = expressions(0);
			 ((AssignContext)_localctx).expr =  new Assign((((AssignContext)_localctx).ID!=null?((AssignContext)_localctx).ID.getText():null), ((AssignContext)_localctx).expressions.expr); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public Expr expr;
		public StmtContext stmt;
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			  List<Expr> list = new ArrayList<Expr>();
			setState(99);
			match(T__2);
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 135671054952L) != 0) {
				{
				{
				setState(100);
				((BlockContext)_localctx).stmt = stmt();
				list.add(((BlockContext)_localctx).stmt.expr);
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(108);
			match(T__3);
			((BlockContext)_localctx).expr =  new Block(list); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfElseStmtContext extends ParserRuleContext {
		public Expr expr;
		public ExpressionsContext expressions;
		public BlockContext trueBlock;
		public BlockContext falseBlock;
		public ExpressionsContext expressions() {
			return getRuleContext(ExpressionsContext.class,0);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public IfElseStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifElseStmt; }
	}

	public final IfElseStmtContext ifElseStmt() throws RecognitionException {
		IfElseStmtContext _localctx = new IfElseStmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ifElseStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(T__4);
			setState(112);
			match(T__5);
			setState(113);
			((IfElseStmtContext)_localctx).expressions = expressions(0);
			setState(114);
			match(T__6);
			setState(115);
			((IfElseStmtContext)_localctx).trueBlock = block();
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__7) {
				{
				setState(116);
				match(T__7);
				setState(117);
				((IfElseStmtContext)_localctx).falseBlock = block();
				}
			}


			        Expr falseExpr = ((IfElseStmtContext)_localctx).falseBlock.expr!= null ? ((IfElseStmtContext)_localctx).falseBlock.expr: new NoneExpr();
			        ((IfElseStmtContext)_localctx).expr =  new Ifelse(((IfElseStmtContext)_localctx).expressions.expr, ((IfElseStmtContext)_localctx).trueBlock.expr, falseExpr);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ForLoopContext extends ParserRuleContext {
		public Expr expr;
		public Token ID;
		public ExpressionsContext startExpr;
		public ExpressionsContext endExpr;
		public BlockContext body;
		public TerminalNode ID() { return getToken(PLParser.ID, 0); }
		public List<ExpressionsContext> expressions() {
			return getRuleContexts(ExpressionsContext.class);
		}
		public ExpressionsContext expressions(int i) {
			return getRuleContext(ExpressionsContext.class,i);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ForLoopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forLoop; }
	}

	public final ForLoopContext forLoop() throws RecognitionException {
		ForLoopContext _localctx = new ForLoopContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_forLoop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(T__8);
			setState(123);
			match(T__5);
			setState(124);
			((ForLoopContext)_localctx).ID = match(ID);
			setState(125);
			match(T__9);
			setState(126);
			((ForLoopContext)_localctx).startExpr = expressions(0);
			setState(127);
			match(T__10);
			setState(128);
			((ForLoopContext)_localctx).endExpr = expressions(0);
			setState(129);
			match(T__6);
			setState(130);
			((ForLoopContext)_localctx).body = block();

			        ((ForLoopContext)_localctx).expr =  new ForLoop((((ForLoopContext)_localctx).ID!=null?((ForLoopContext)_localctx).ID.getText():null), ((ForLoopContext)_localctx).startExpr.expr, ((ForLoopContext)_localctx).endExpr.expr, ((ForLoopContext)_localctx).body.expr);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionsContext extends ParserRuleContext {
		public Expr expr;
		public ExpressionsContext left;
		public ExpressionsContext expressions;
		public FuntionCallContext funtionCall;
		public ValueContext value;
		public ArrayLiteralContext arrayLiteral;
		public Token ID;
		public ExpressionsContext index;
		public MapLiteralContext mapLiteral;
		public SetLiteralContext setLiteral;
		public BuiltinContext builtin;
		public ExpressionsContext right;
		public List<ExpressionsContext> expressions() {
			return getRuleContexts(ExpressionsContext.class);
		}
		public ExpressionsContext expressions(int i) {
			return getRuleContext(ExpressionsContext.class,i);
		}
		public FuntionCallContext funtionCall() {
			return getRuleContext(FuntionCallContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public ArrayLiteralContext arrayLiteral() {
			return getRuleContext(ArrayLiteralContext.class,0);
		}
		public TerminalNode ID() { return getToken(PLParser.ID, 0); }
		public MapLiteralContext mapLiteral() {
			return getRuleContext(MapLiteralContext.class,0);
		}
		public SetLiteralContext setLiteral() {
			return getRuleContext(SetLiteralContext.class,0);
		}
		public BuiltinContext builtin() {
			return getRuleContext(BuiltinContext.class,0);
		}
		public ExpressionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressions; }
	}

	public final ExpressionsContext expressions() throws RecognitionException {
		return expressions(0);
	}

	private ExpressionsContext expressions(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionsContext _localctx = new ExpressionsContext(_ctx, _parentState);
		ExpressionsContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_expressions, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(134);
				match(T__20);
				setState(135);
				((ExpressionsContext)_localctx).expressions = expressions(9);
				 ((ExpressionsContext)_localctx).expr =  new Arithmetics(Operator.Sub, new IntLiteral("0"), ((ExpressionsContext)_localctx).expressions.expr); 
				}
				break;
			case 2:
				{
				setState(138);
				match(T__5);
				setState(139);
				((ExpressionsContext)_localctx).expressions = expressions(0);
				setState(140);
				match(T__6);
				 ((ExpressionsContext)_localctx).expr =  ((ExpressionsContext)_localctx).expressions.expr; 
				}
				break;
			case 3:
				{
				setState(143);
				((ExpressionsContext)_localctx).funtionCall = funtionCall();
				 ((ExpressionsContext)_localctx).expr =  ((ExpressionsContext)_localctx).funtionCall.expr; 
				}
				break;
			case 4:
				{
				setState(146);
				((ExpressionsContext)_localctx).value = value();
				 ((ExpressionsContext)_localctx).expr =  ((ExpressionsContext)_localctx).value.expr; 
				}
				break;
			case 5:
				{
				setState(149);
				((ExpressionsContext)_localctx).arrayLiteral = arrayLiteral();
				 ((ExpressionsContext)_localctx).expr =  ((ExpressionsContext)_localctx).arrayLiteral.expr; 
				}
				break;
			case 6:
				{
				setState(152);
				((ExpressionsContext)_localctx).ID = match(ID);
				setState(153);
				match(T__22);
				setState(154);
				((ExpressionsContext)_localctx).index = ((ExpressionsContext)_localctx).expressions = expressions(0);
				setState(155);
				match(T__23);
				 ((ExpressionsContext)_localctx).expr =  new ArrayIndexing((((ExpressionsContext)_localctx).ID!=null?((ExpressionsContext)_localctx).ID.getText():null), ((ExpressionsContext)_localctx).index.expr); 
				}
				break;
			case 7:
				{
				setState(158);
				((ExpressionsContext)_localctx).mapLiteral = mapLiteral();
				 ((ExpressionsContext)_localctx).expr =  ((ExpressionsContext)_localctx).mapLiteral.expr; 
				}
				break;
			case 8:
				{
				setState(161);
				((ExpressionsContext)_localctx).setLiteral = setLiteral();
				 ((ExpressionsContext)_localctx).expr =  ((ExpressionsContext)_localctx).setLiteral.expr; 
				}
				break;
			case 9:
				{
				setState(164);
				((ExpressionsContext)_localctx).builtin = builtin();
				 ((ExpressionsContext)_localctx).expr =  ((ExpressionsContext)_localctx).builtin.expr; 
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(226);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(224);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
					case 1:
						{
						_localctx = new ExpressionsContext(_parentctx, _parentState);
						_localctx.left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expressions);
						setState(169);
						if (!(precpred(_ctx, 20))) throw new FailedPredicateException(this, "precpred(_ctx, 20)");
						setState(170);
						match(T__11);
						setState(171);
						((ExpressionsContext)_localctx).right = ((ExpressionsContext)_localctx).expressions = expressions(21);
						 ((ExpressionsContext)_localctx).expr =  new Arithmetics(Operator.Mul, ((ExpressionsContext)_localctx).left.expr, ((ExpressionsContext)_localctx).right.expr); 
						}
						break;
					case 2:
						{
						_localctx = new ExpressionsContext(_parentctx, _parentState);
						_localctx.left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expressions);
						setState(174);
						if (!(precpred(_ctx, 19))) throw new FailedPredicateException(this, "precpred(_ctx, 19)");
						setState(175);
						match(T__12);
						setState(176);
						((ExpressionsContext)_localctx).right = ((ExpressionsContext)_localctx).expressions = expressions(20);
						 ((ExpressionsContext)_localctx).expr =  new Compare(Comparator.LT, ((ExpressionsContext)_localctx).left.expr, ((ExpressionsContext)_localctx).right.expr); 
						}
						break;
					case 3:
						{
						_localctx = new ExpressionsContext(_parentctx, _parentState);
						_localctx.left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expressions);
						setState(179);
						if (!(precpred(_ctx, 18))) throw new FailedPredicateException(this, "precpred(_ctx, 18)");
						setState(180);
						match(T__13);
						setState(181);
						((ExpressionsContext)_localctx).right = ((ExpressionsContext)_localctx).expressions = expressions(19);
						 ((ExpressionsContext)_localctx).expr =  new Compare(Comparator.LE, ((ExpressionsContext)_localctx).left.expr, ((ExpressionsContext)_localctx).right.expr); 
						}
						break;
					case 4:
						{
						_localctx = new ExpressionsContext(_parentctx, _parentState);
						_localctx.left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expressions);
						setState(184);
						if (!(precpred(_ctx, 17))) throw new FailedPredicateException(this, "precpred(_ctx, 17)");
						setState(185);
						match(T__14);
						setState(186);
						((ExpressionsContext)_localctx).right = ((ExpressionsContext)_localctx).expressions = expressions(18);
						 ((ExpressionsContext)_localctx).expr =  new Compare(Comparator.GT, ((ExpressionsContext)_localctx).left.expr, ((ExpressionsContext)_localctx).right.expr); 
						}
						break;
					case 5:
						{
						_localctx = new ExpressionsContext(_parentctx, _parentState);
						_localctx.left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expressions);
						setState(189);
						if (!(precpred(_ctx, 16))) throw new FailedPredicateException(this, "precpred(_ctx, 16)");
						setState(190);
						match(T__15);
						setState(191);
						((ExpressionsContext)_localctx).right = ((ExpressionsContext)_localctx).expressions = expressions(17);
						 ((ExpressionsContext)_localctx).expr =  new Compare(Comparator.GE, ((ExpressionsContext)_localctx).left.expr, ((ExpressionsContext)_localctx).right.expr); 
						}
						break;
					case 6:
						{
						_localctx = new ExpressionsContext(_parentctx, _parentState);
						_localctx.left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expressions);
						setState(194);
						if (!(precpred(_ctx, 15))) throw new FailedPredicateException(this, "precpred(_ctx, 15)");
						setState(195);
						match(T__16);
						setState(196);
						((ExpressionsContext)_localctx).right = ((ExpressionsContext)_localctx).expressions = expressions(16);
						 ((ExpressionsContext)_localctx).expr =  new Compare(Comparator.EQ, ((ExpressionsContext)_localctx).left.expr, ((ExpressionsContext)_localctx).right.expr); 
						}
						break;
					case 7:
						{
						_localctx = new ExpressionsContext(_parentctx, _parentState);
						_localctx.left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expressions);
						setState(199);
						if (!(precpred(_ctx, 14))) throw new FailedPredicateException(this, "precpred(_ctx, 14)");
						setState(200);
						match(T__17);
						setState(201);
